# 2026_Software_Projects

psvita-robot-console/: .gitignore  CMakeLists.txt  PROJECT_STATUS.md  README.md  ROADMAP.md  SETUP_VITA3K_REMOTE.md
psvita-robot-console/assets/: camera.json  robots.json
psvita-robot-console/assets/sce_sys/livearea/contents/: template.xml
psvita-robot-console/screenshots/: README.md
psvita-robot-console/source/: alt_main.c  camera.c  camera.h  feedback.c  feedback.h  input.c  input.h  log.c  log.h  main.c  mjpeg.c  mjpeg.h  network.c  network.h  robot.c  robot.h  ui.c  ui.h  version.h
psvita-robot-console/tools/: CROSS_MACHINE_SETUP.md  README_MOCK_SERVER.md  flask_mock_server.py  flask_mock_server_standalone.py  requirements.txt  setup_cross_machine.sh  test_mock_server.sh
